# HuahuoV2

./: .gitignore  .gitmodules  README.md  buildall.sh  huahuo.secret.key  installation_centos.sh  package-lock.json  package.json  sd_magics.txt  syncall.sh  webpack.config.js
HHIDE/: .gitignore  (+9 more)
HuaHuoEngine/: .gitignore  CMakeLists.txt  build.sh
HuaHuoEngine/PlatformDependent/WebGL/: Demangle.js  DynamicJslibLoader.js  Preprocess.js  UserJsprePlaceholder.js  emcc_with_config.pl  emscripten.config
HuaHuoEngine/PlatformDependent/Win/: AutoPtr.h  BStrHolder.h  CoInitializer.h  CopyPaste.cpp  CrashHandler.h  CurrentTimeWinPlayer.cpp  DetectProcessorCores.cpp  ExternalCrashHandler.h  ExternalProfiler.cpp  ExternalProfiler.h  FileInformation.cpp  FileInformation.h  FileInformationTests.cpp  GetFormattedErrorString.h  LaunchUtilities.cpp  LaunchUtilitiesTests.cpp  LocalFileSystemWindowsShared.cpp  PathUnicodeConversion.cpp  PathUnicodeConversion.h  Plugins.cpp  Resource.h  SafeArrayHolder.h  SingleAppInstance.cpp  SingleAppInstance.h  SmartComPointer.h  StackWalker.cpp  StackWalker.h  VersionHelpers.h  WGLExtensions.cpp  WGLExtensions.h  WinDriverUtils.cpp  WinLibLoader.cpp  WinProcessInformation.h  WinUnicode.cpp  WinUnicode.h  WinUtils.cpp  WinUtilsTests.cpp  typeinfo.h  wow64.cpp
HuaHuoEngine/WebIDL/: HuaHuoEditor.idl  HuaHuoEngine.idl  HuaHuoGraphics.idl  PersistentManager.idl
HuaHuoEngine/src/: HuaHuoEngine.cpp  HuaHuoEngine.h  HuaHuoEngineConfig.h.in  HuaHuoEngineWrapper.cpp
HuaHuoEngine/src/BaseClasses/: BaseTypes.h  BitField.h  ClassRegistration.cpp  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  ImmediatePtr.h  InstanceID.h  MessageData.h  MessageHandler.cpp  MessageHandler.h  MessageHandlerRegistration.h  MessageIdentifier.cpp  MessageIdentifier.h  NamedObject.cpp  NamedObject.h  PPtr.h
HuaHuoEngine/src/Camera/: BaseRenderer.cpp  BaseRenderer.h  BatchRendererGroup.h  Camera.cpp  Camera.h  CameraCullingParameters.h  CameraStack.cpp  CameraStack.h  CameraTypes.h  CameraUtil.cpp  CameraUtil.h  CullResults.cpp  CullResults.h  CullingParameters.h  GraphicsSettings.cpp  GraphicsSettings.h  RenderManager.cpp  RenderManager.h  RenderNode.cpp  RenderNode.h  RenderNodeQueue.cpp  RenderNodeQueue.h  RenderScene.cpp  RenderScene.h  RendererScene.cpp  RendererScene.h  SceneNode.cpp  SceneNode.h  SharedRenderData.h  SharedRendererData.cpp  SharedRendererData.h  SharedRendererDataTypes.h  SharedRendererScene.cpp  SharedRendererScene.h
HuaHuoEngine/src/Components/: BaseComponent.cpp  BaseComponent.h
HuaHuoEngine/src/Containers/: GrowableBuffer.cpp  GrowableBuffer.h
HuaHuoEngine/src/Core/: ConstructorUtility.h  SharedObject.h  SharedObjectPtr.h
HuaHuoEngine/src/Editor/: SceneInspector.cpp  SceneInspector.h  SceneView.cpp  SceneView.h
HuaHuoEngine/src/GameCode/: Behaviour.cpp  Behaviour.h
HuaHuoEngine/src/Geometry/: AABB.cpp  BoundingUtils.cpp  BoundingUtils.h  Capsule.cpp  Intersection.h  Ray.cpp  TriTriIntersect.cpp
HuaHuoEngine/src/GfxDevice/: BuiltinShaderParams.cpp  BuiltinShaderParams.h  BuiltinShaderParamsNames.h  FrameTiming.cpp  FrameTiming.h  GfxDevice.cpp  GfxDevice.h  GfxDeviceAsyncCommand.h  GfxDeviceObjects.h  GfxDeviceSetup.cpp  GfxDeviceSetup.h  GfxDeviceTypes.h  HDROutputSettings.cpp  HDROutputSettings.h  TextureIdMap.cpp  TextureIdMap.h  TransformState.h
HuaHuoEngine/src/Graphics/: ColorGamut.cpp  ColorGamut.h  Format.cpp  Format.h  GraphicsHelper.cpp  GraphicsHelper.h  Image.cpp  Image.h  LightmapTypes.h  MeshRenderer.cpp  MeshRenderer.h  RenderSurface.cpp  RenderSurface.h  RenderTexture.cpp  RenderTexture.h  RenderTextureDesc.h  RenderTextureMap.cpp  RenderTextureMap.h  Renderer.cpp  Renderer.h  RendererType.h  StaticBatchInfo.h  Texture.cpp  Texture.h
HuaHuoEngine/src/Input/: TargetFrameRate.h  TimeManager.cpp  TimeManager.h
HuaHuoEngine/src/Job/: BlockRangeJob.cpp  BlockRangeJob.h  JobTypes.h
HuaHuoEngine/src/Logging/: LogAssert.h
HuaHuoEngine/src/Math/: ColorSpaceConversion.h  Matrix3x3.h  Matrix4x4_REF.cpp  Quaternionf.cpp  Quaternionf.h  Vector2.cpp  Vector3f.cpp  Vector3f.h  Vector4f.h
HuaHuoEngine/src/Memory/: AllocatorLabels.h  BatchAllocator.h  MemoryMacros.h  MemoryMacrosDetails.h
HuaHuoEngine/src/Misc/: GameObjectUtility.cpp
HuaHuoEngine/src/Profiler/: TimeHelper.cpp  TimeHelper.h
HuaHuoEngine/src/SceneManager/: HuaHuoScene.cpp  HuaHuoScene.h  HuaHuoSceneHandle.h  SceneManager.cpp  SceneManager.h
HuaHuoEngine/src/Serialize/: PathNamePersistentManager.cpp  PathNamePersistentManager.h  PersistentManager.cpp  PersistentManager.h  Remapper.cpp  Remapper.h  SerializeTraits.h  SerializeUtility.h  SerializedFileFormatVersion.h  SwapEndianBytes.h
HuaHuoEngine/src/Shaders/: GraphicsCaps.cpp  GraphicsCaps.h  Material.cpp  Material.h  ShaderPassContext.cpp  ShaderPassContext.h  ShaderPropertySheet.h  SharedMaterialData.h
HuaHuoEngine/src/Threads/: ExtendedAtomicOps-arm.h  (+2 more)
HuaHuoEngine/test/: EMScriptenTutorial.cpp  main.cpp  webgl_multiple_context.cpp
HuaHuoEngineV2/: .gitignore  CMakeLists.txt  build.sh
HuaHuoEngineV2/Runtime/: HuaHuoEngine.cpp  HuaHuoEngine.h  HuaHuoEngineConfig.h.in  HuaHuoEngineWrapper.cpp
HuaHuoEngineV2/WebIDL/: HuaHuoEngine.idl  HuaHuoGraphics.idl
HuaHuoEngineV2/jni/: jniimpl.cpp
HuaHuoEngineV2/src/: BinaryResource.cpp  BinaryResource.h  CloneObject.cpp  CloneObject.h  HuaHuoEngine.h  HuaHuoEngineWrapper.cpp  Layer.cpp  Layer.h  ObjectStore.cpp  ObjectStore.h  ResourceManager.cpp  ResourceManager.h  TimeLineCellManager.cpp  TimeLineCellManager.h  main.cpp
HuaHuoEngineV2/test/: esUtil.c  esUtil.h  main.cpp
PersistentManager/: CMakeLists.txt  build.sh  glue.cpp  glue.js
PersistentManager/WebIDL/: PersistentManager.idl
PersistentManager/cpp/: PersistentManager.cpp  PersistentManagerWrapper.cpp
PersistentManager/include/: PersistentManager.h  PersistentManagerConfig.h.in  Types.h
PersistentManager/src/: HuaHuoEngine.cpp  HuaHuoEngine.h  PersistentManager.cpp  PersistentManager.h  PersistentManagerWrapper.cpp  Transform.cpp  Transform.h
PersistentManager/test/: main.cpp
(+1399 files in other folders)
